--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Подготовка к олимпиадам по физике</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
+    <link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
         body {
@@ -139,7 +139,7 @@
         .task-card a:hover {
             color: #ea4335;
         }
-        .competitions-section {
+        .articles-section {
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
@@ -147,14 +147,14 @@
             border-radius: 16px;
             animation: fadeIn 1s ease-in-out;
         }
-        .competitions-section h2 {
+        .articles-section h2 {
             text-align: center;
             font-size: 2em;
             font-weight: 700;
             color: #1a73e8;
             margin-bottom: 20px;
         }
-        .competitions-card {
+        .articles-card {
             background: #ffffff;
             padding: 25px;
             margin: 15px 0;
@@ -164,12 +164,12 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border: 2px solid transparent;
         }
-        .competitions-card:hover {
+        .articles-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
             border-color: #fbbc05;
         }
-        .competitions-card p {
+        .articles-card p {
             color: #5f6368;
             font-size: 1.1em;
             margin: 10px 0;
@@ -280,7 +280,7 @@
             <a href="info.html" class="nav-link">О платформе</a>
             <a href="index.html#home" class="nav-link">Главная</a>
             <a href="tasks.html" class="nav-link">Задачи</a>
-            <a href="index.html#competitions" class="nav-link">Соревнования</a>
+            <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
     </div>
@@ -291,25 +291,25 @@
     </div>
     <div class="popular-tasks-section">
         <h2>Популярные задачи</h2>
-       <div class="popular-tasks">
-    <div class="task-card">
-        <h3>Республиканский предметный конкурс 2024/2025, Районный (городской) этап, 7-е классы - Задача 4</h3>
-        <a href="task-details2.html?id=rpc2025-7-4" target="_blank">Посмотреть на задачу</a>
+        <div class="popular-tasks">
+            <div class="task-card">
+                <h3>Республиканский предметный конкурс 2024/2025, Районный (городской) этап, 7-е классы - Задача 4</h3>
+                <a href="task-details2.html?id=rpc2025-7-4" target="_blank">Посмотреть на задачу</a>
+            </div>
+            <div class="task-card">
+                <h3>Республиканская предметная олимпиада 2024/2025, Районный (городской) этап, 10-е классы - Задача 5</h3>
+                <a href="task-details2.html?id=rfo2025-10-5" target="_blank">Посмотреть на задачу</a>
+            </div>
+            <div class="task-card">
+                <h3>Республиканская предметная олимпиада 2024/2025, Полуфинальный этап, 8–9-е классы - Задача 23</h3>
+                <a href="task-details2.html?id=rfo2025-89-23" target="_blank">Посмотреть на задачу</a>
+            </div>
+        </div>
     </div>
-    <div class="task-card">
-        <h3>Республиканская предметная олимпиада 2024/2025, Районный (городской) этап, 10-е классы - Задача 5</h3>
-        <a href="task-details2.html?id=rfo2025-10-5" target="_blank">Посмотреть на задачу</a>
-    </div>
-    <div class="task-card">
-        <h3>Республиканская предметная олимпиада 2024/2025, Полуфинальный этап, 8–9-е классы - Задача 23</h3>
-        <a href="task-details2.html?id=rfo2025-89-23" target="_blank">Посмотреть на задачу</a>
-    </div>
-</div>
-    </div>
-    <div id="competitions" class="competitions-section">
-        <h2>Соревнования</h2>
-        <div class="competitions-card">
-            <p>Информация о предстоящих соревнованиях и олимпиадах по физике скоро появится!</p>
+    <div id="articles" class="articles-section">
+        <h2>Статьи</h2>
+        <div class="articles-card">
+            <p>Ознакомьтесь с нашими статьями по олимпиадной физике, доступными на странице <a href="articles.html" target="_blank">Статьи</a>.</p>
         </div>
     </div>
     <div id="contact" class="contact-section">
