--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="icon" type="image/jpeg" href="icon.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Подготовка к олимпиадам по физике</title>
+    <title>Atomaroid - Подготовка к олимпиадам по физике</title>
+<meta name="description" content="Atomaroid — готовьтесь к олимпиадам по физике: задачи, решения, статьи и подготовка для победителей.">
+
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
