--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Atomaroid - Подготовка к олимпиадам по физике</title>
 <meta name="description" content="Atomaroid — готовьтесь к олимпиадам по физике: задачи, решения, статьи и подготовка для победителей.">
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Atomaroid",
+  "url": "https://aylinmuzzaffarli.github.io/Atomaroid/",
+  "logo": "https://aylinmuzzaffarli.github.io/Atomaroid/icon.jpeg",
+  "sameAs": []
+}
+</script>
+
+
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
