--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Atomaroid - Подготовка к олимпиадам по физике</title>
 <meta name="description" content="Atomaroid — готовьтесь к олимпиадам по физике: задачи, решения, статьи и подготовка для победителей.">
 
+    <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, задачи по физике, статьи по физике, обучение, школьные олимпиады">
+
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
