--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="icon" type="image/jpeg" href="icon.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atomaroid - Подготовка к олимпиадам по физике</title>
+   <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
+
 <meta name="description" content="Atomaroid — готовьтесь к олимпиадам по физике: задачи, решения, статьи и подготовка для победителей.">
 
     <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, задачи по физике, статьи по физике, обучение, школьные олимпиады">
