--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
 
-<meta name="description" content="Atomaroid — готовьтесь к олимпиадам по физике: задачи, решения, статьи и подготовка для победителей.">
+<meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
+<meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане">
 
-    <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, задачи по физике, статьи по физике, обучение, школьные олимпиады">
 
 
     <script type="application/ld+json">
