--- a/tasks.html
+++ b/tasks.html
@@ -175,7 +175,7 @@
             <a href="info.html" class="nav-link">О платформе</a>
             <a href="index.html#home" class="nav-link">Главная</a>
             <a href="tasks.html" class="nav-link">Задачи</a>
-            <a href="index.html#competitions" class="nav-link">Соревнования</a>
+            <a href="articles.html" class="nav-link">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
     </div>
