--- a/tasks.html
+++ b/tasks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задачи - Atomaroid</title>
+    <link rel="icon" type="image/webp" href="https://i.imgur.com/j9sEeC4_d.webp?maxwidth=760&fidelity=grand">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
