--- a/tasks.html
+++ b/tasks.html
@@ -488,7 +488,7 @@ navLinks.forEach(link => {
     const href = link.getAttribute('href').split('#')[0];
     link.classList.remove('active');
     if (href === currentPath) {
-        link.classList.add('(active');
+        link.classList.add('active');
     }
 });
 </script>
