--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </nav>
     </div>
     <div id="home" class="main-banner">
-        <h1>Подготовка к олимпиадам по физике</h1>
+        <h1>Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане</h1>
         <p>Решайте задачи, изучайте решения и готовьтесь к победам!</p>
         <button onclick="document.querySelector('.popular-tasks-section').scrollIntoView({behavior: 'smooth'})">Начать решать</button>
     </div>
