--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
    <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
 
 <meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
-<meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане">
-
+<meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане, Айлин, Айлин Музаффарли, Aylin, Aylin Muzaffarli">
 
 
     <script type="application/ld+json">
