--- a/info.html
+++ b/info.html
@@ -227,7 +227,7 @@
             <a href="info.html">О платформе</a>
             <a href="index.html#home">Главная</a>
             <a href="tasks.html">Задачи</a>
-            <a href="index.html#competitions">Соревнования</a>
+            <a href="index.html#competitions">Статьи</a>
             <a href="index.html#contact">Контакты</a>
         </nav>
     </div>
