--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <link rel="icon" type="image/jpeg" href="icon.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
+    <title>Atomaroid — Олимпиадная физика для школьников Азербайджана</title>
 
-<meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
-<meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане, Айлин, Айлин Музаффарли, Aylin, Aylin Muzaffarli">
-
+    <meta name="description" content="Atomaroid — платформа для подготовки к олимпиадам по физике в Азербайджане: задачи, решения, статьи и поддержка для победителей.">
+    <meta name="keywords" content="Atomaroid, олимпиадная физика, подготовка к олимпиадам, физика Азербайджан, задачи по физике, статьи по физике, школьные олимпиады Азербайджан, обучение в Азербайджане, Айлин, Айлин Музаффарли, Aylin, Aylin Muzaffarli">
 
     <script type="application/ld+json">
 {
@@ -19,8 +18,7 @@
   "logo": "https://aylinmuzzaffarli.github.io/Atomaroid/icon.jpeg",
   "sameAs": []
 }
-</script>
-
+    </script>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -67,6 +65,37 @@
         .header nav a.active {
             color: #1a73e8;
             border-bottom: 2px solid #1a73e8;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background: #ffffff;
+            min-width: 200px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            z-index: 1000;
+            margin-top: 5px;
+        }
+        .dropdown.active .dropdown-content {
+            display: block;
+        }
+        .dropdown-content a {
+            display: block;
+            padding: 12px 16px;
+            text-decoration: none;
+            color: #202124;
+            font-weight: 600;
+            margin-left: 0;
+            transition: color 0.3s ease, background 0.3s ease;
+        }
+        .dropdown-content a:hover {
+            color: #1a73e8;
+            background: #e8f0fe;
+            border-bottom: none;
         }
         .main-banner {
             text-align: center;
@@ -278,15 +307,12 @@
             .header nav {
                 margin-top: 10px;
             }
-            .main-banner h1 {
-                font-size: 2.2em;
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
             }
-            .task-card {
-                width: 100%;
-                max-width: 400px;
-            }
-            .contact-section h2 {
-                font-size: 1.8em;
+            .dropdown-content {
+                min-width: 150px;
             }
         }
     </style>
@@ -298,6 +324,14 @@
             <a href="info.html" class="nav-link">О платформе</a>
             <a href="index.html#home" class="nav-link">Главная</a>
             <a href="tasks.html" class="nav-link">Задачи</a>
+            <div class="dropdown">
+                <a href="#" class="nav-link dropdown-toggle">Материалы</a>
+                <div class="dropdown-content">
+                    <a href="books.html">Книги и PDF</a>
+                    <a href="external-links.html">Внешние ссылки на задачи</a>
+                    <a href="handbook.html">Olympiad Handbook</a>
+                </div>
+            </div>
             <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
@@ -366,6 +400,21 @@
                     // For other pages (e.g., info.html, tasks.html), highlight based on path
                     link.classList.add('active');
                 }
+            }
+        });
+
+        // Toggle dropdown on click
+        const dropdownToggle = document.querySelector('.dropdown-toggle');
+        const dropdown = document.querySelector('.dropdown');
+        dropdownToggle.addEventListener('click', (e) => {
+            e.preventDefault();
+            dropdown.classList.toggle('active');
+        });
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!dropdown.contains(e.target)) {
+                dropdown.classList.remove('active');
             }
         });
     </script>
