--- a/external-links.html
+++ b/external-links.html
@@ -287,7 +287,7 @@
             <div class="links-card">
                 <h3>Balkan Physics Olympiad (BPhO)</h3>
                 <p>Балканская олимпиада по физике: задачи и материалы.</p>
-                <a href="https://balkanphysicalunion.info/?p=864" target="_blank">Перейти</a>
+                <a href="https://balkanphysicalunion.info/?page_id=657" target="_blank">Перейти</a>
             </div>
             <div class="links-card">
                 <h3>Ibero-American Physics Olympiad (OIbF)</h3>
