--- a/external-links.html
+++ b/external-links.html
@@ -372,7 +372,7 @@
                 id: 'link8',
                 title: 'Balkan Physics Olympiad (BPhO)',
                 description: 'Балканская олимпиада по физике: задачи и материалы.',
-                url: 'https://balkanphysicalunion.info/?p=864',
+                url: 'https://balkanphysicalunion.info/?page_id=657',
                 language: 'International',
                 element: document.querySelectorAll('.links-card')[7]
             },
