--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="dropdown-content">
                     <a href="books.html">Книги и PDF</a>
                     <a href="external-links.html">Внешние ссылки на задачи</a>
-                    <a href="handbook.html">Olympiad Handbook</a>
+                    <a href="handbook.html">Олимпиадный гайд</a>
                 </div>
             </div>
             <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
