--- a/articles1.html
+++ b/articles1.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             background: #ffffff;
-            color: #321
+            color: #202124;
             line-height: 1.6;
         }
         .header {
@@ -49,6 +49,37 @@
         .header nav a.active {
             color: #1a73e8;
             border-bottom: 2px solid #1a73e8;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background: #ffffff;
+            min-width: 200px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            z-index: 1000;
+            margin-top: 5px;
+        }
+        .dropdown.active .dropdown-content {
+            display: block;
+        }
+        .dropdown-content a {
+            display: block;
+            padding: 12px 16px;
+            text-decoration: none;
+            color: #202124;
+            font-weight: 600;
+            margin-left: 0;
+            transition: color 0.3s ease, background 0.3s ease;
+        }
+        .dropdown-content a:hover {
+            color: #1a73e8;
+            background: #e8f0fe;
+            border-bottom: none;
         }
         .article-container {
             max-width: 1200px;
@@ -119,6 +150,13 @@
             .header nav {
                 margin-top: 10px;
             }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
             .article-container h1 {
                 font-size: 1.8em;
             }
@@ -132,6 +170,14 @@
             <a href="info.html" class="nav-link">О платформе</a>
             <a href="index.html#home" class="nav-link">Главная</a>
             <a href="tasks.html" class="nav-link">Задачи</a>
+            <div class="dropdown">
+                <a href="#" class="nav-link dropdown-toggle">Материалы</a>
+                <div class="dropdown-content">
+                    <a href="books.html">Книги и PDF</a>
+                    <a href="external-links.html">Внешние ссылки на задачи</a>
+                    <a href="handbook.html">Олимпиадный гайд</a>
+                </div>
+            </div>
             <a href="articles.html" class="nav-link active">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
@@ -160,20 +206,39 @@
             const path = href.split('#')[0];
             const hash = href.includes('#') ? `#${href.split('#')[1]}` : '';
 
-            // Remove active class from all links
             link.classList.remove('active');
-
-            // Highlight based on page
             if (path === currentPath) {
                 if (currentPath === 'index.html' || currentPath === '') {
-                    // For index.html, highlight based on hash
                     if (hash === currentHash || (hash === '' && currentHash === '#home')) {
                         link.classList.add('active');
                     }
                 } else {
-                    // For other pages (e.g., info.html, tasks.html), highlight based on path
                     link.classList.add('active');
                 }
+            }
+        });
+
+        // Set active class for dropdown item
+        const dropdownLinks = document.querySelectorAll('.dropdown-content a');
+        dropdownLinks.forEach(link => {
+            if (link.getAttribute('href') === currentPath) {
+                link.classList.add('active');
+                document.querySelector('.dropdown-toggle').classList.add('active');
+            }
+        });
+
+        // Toggle dropdown on click
+        const dropdownToggle = document.querySelector('.dropdown-toggle');
+        const dropdown = document.querySelector('.dropdown');
+        dropdownToggle.addEventListener('click', (e) => {
+            e.preventDefault();
+            dropdown.classList.toggle('active');
+        });
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!dropdown.contains(e.target)) {
+                dropdown.classList.remove('active');
             }
         });
     </script>
