--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
+    <link rel="icon" type="image/jpeg" href="https://i.imgur.com/gcLpNUp.jpeg">
     <title>О платформе</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -17,10 +17,6 @@
             color: #202124;
             line-height: 1.6;
         }
-.header nav a.active {
-    color: #1a73e8;
-    border-bottom: 2px solid #1a73e8;
-}
         .header {
             background: #ffffff;
             padding: 20px 40px;
@@ -44,12 +40,52 @@
             text-decoration: none;
             color: #202124;
             font-weight: 600;
-            transition: color 0.3s ease;
+            transition: color 0.3s ease, border-bottom 0.3s ease;
+        }
+        .header nav a:hover {
+            color: #1a73e8;
+            border-bottom: 2px solid #1a73e8;
+        }
+        .header nav a.active {
+            color: #1a73e8;
+            border-bottom: 2px solid #1a73e8;
         }
         .header nav a.active:hover {
-    color: #1a73e8; /* Keep the active link blue on hover */
-    border-bottom: 2px solid #1a73e8; /* Maintain the active underline */
-}        .info-section {
+            color: #1a73e8;
+            border-bottom: 2px solid #1a73e8;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background: #ffffff;
+            min-width: 200px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            z-index: 1000;
+            margin-top: 5px;
+        }
+        .dropdown.active .dropdown-content {
+            display: block;
+        }
+        .dropdown-content a {
+            display: block;
+            padding: 12px 16px;
+            text-decoration: none;
+            color: #202124;
+            font-weight: 600;
+            margin-left: 0;
+            transition: color 0.3s ease, background 0.3s ease;
+        }
+        .dropdown-content a:hover {
+            color: #1a73e8;
+            background: #e8f0fe;
+            border-bottom: none;
+        }
+        .info-section {
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
@@ -187,19 +223,6 @@
             color: #ffffff;
             margin-top: 40px;
         }
-	    <script>
-        // Highlight active navigation link
-        const navLinks = document.querySelectorAll('.header nav a');
-        const currentPath = window.location.pathname.split('/').pop() || 'index.html';
-        navLinks.forEach(link => {
-            const href = link.getAttribute('href').split('#')[0];
-            link.classList.remove('active');
-            if (href === currentPath) {
-                link.classList.add('active');
-            }
-        });
-    </script>
-</body>
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -212,6 +235,13 @@
             .header nav {
                 margin-top: 10px;
             }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
             .info-section h1, .contact-section h2 {
                 font-size: 1.8em;
             }
@@ -223,12 +253,21 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Atomaroid</div>        <nav>
-            <a href="info.html">О платформе</a>
-            <a href="index.html#home">Главная</a>
-            <a href="tasks.html">Задачи</a>
-            <a href="index.html#competitions">Статьи</a>
-            <a href="index.html#contact">Контакты</a>
+        <div class="logo">Atomaroid</div>
+        <nav>
+            <a href="info.html" class="nav-link active">О платформе</a>
+            <a href="index.html#home" class="nav-link">Главная</a>
+            <a href="tasks.html" class="nav-link">Задачи</a>
+            <div class="dropdown">
+                <a href="#" class="nav-link dropdown-toggle">Материалы</a>
+                <div class="dropdown-content">
+                    <a href="books.html">Книги и PDF</a>
+                    <a href="external-links.html">Внешние ссылки на задачи</a>
+                    <a href="handbook.html">Олимпиадный гайд</a>
+                </div>
+            </div>
+            <a href="articles.html" class="nav-link">Статьи</a>
+            <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
     </div>
     <div class="info-section">
@@ -262,7 +301,7 @@
             <h2>🧭 Мои рекомендации тем, кто готовится к олимпиадам</h2>
             <ul>
                 <li>Решайте задачи регулярно — пусть даже одну в день. Последовательность — ключ к прогрессу.</li>
-                <li>Не бойтесь сложных тем. Ошибка — это маркер роста, а не повод отступить.</li>
+                <li>Не бояйтесь сложных тем. Ошибка — это маркер роста, а не повод отступить.</li>
                 <li>Всегда сначала пробуйте решить задачу самостоятельно. Решение без размышления — иллюзия знания.</li>
                 <li>Работайте вглубь. Одна по-настоящему понятая задача ценнее десятка поверхностных.</li>
                 <li>Берегите себя. Разум требует отдыха так же, как мышцы — восстановления.</li>
@@ -278,14 +317,13 @@
             <p>В физике главное — не форма подачи, а глубина понимания. Знание начинается там, где ты можешь самостоятельно вывести закон, а не только воспроизвести его.</p>
             <p><strong>Я понимаю, как обстоят дела с образованием в русскоязычных секторах Азербайджана. Порой нам приходится искать материалы не только на русском языке. В моём опыте, в русскоязычном секторе у нас были и учителя, преподающие на азербайджанском. Но, владея несколькими языками, я осознала: язык — не преграда. Студент, горящий желанием учиться, всегда найдёт свой путь, несмотря на любые трудности.</strong></p>
             <p><strong>Мне кажется, что в физике язык — лишь инструмент. Главное — постичь суть законов природы, выстроить логические связи и уверенно применять формулы. Успех определяется не языком, на котором вы учитесь, а глубиной вашего понимания и умением решать задачи.</strong></p>
-                    </div>
+        </div>
         <div class="info-card">
             <h2>📚 Рекомендуемые ресурсы</h2>
             <ul>
                 <li><a href="https://ipho.org" target="_blank">ipho.org</a> — архив задач Международной олимпиады по физике</li>
                 <li><a href="https://ocw.mit.edu/courses/physics/8-01sc-classical-mechanics-fall-2016" target="_blank">MIT OpenCourseWare (Walter Lewin)</a> — классическая механика с живыми объяснениями</li>
                 <li><a href="https://www.youtube.com/@pvictor54" target="_blank">YouTube: Павел Виктор</a> — объяснения, понятные даже на стыке хаоса</li>
-                
                 <li>Турецкие источники, редакционные статьи, просмотр экспериментов на YouTube — для вдохновения и альтернативных подходов к физике</li>
             </ul>
         </div>
@@ -293,25 +331,60 @@
             <h2>🔚 Заключение</h2>
             <p>Физика — это не набор формул, а язык Вселенной. И каждая задача — это диалог с реальностью.</p>
             <p>Если ребёнок в год способен с удивлением наблюдать за падающий лист, то и вы способны с тем же восхищением искать ответы в законах природы.</p>
-            <p class="quote">"Великая цель науки — не ответы, а честные вопросы. Побеждает не тот, кто всё понял, а тот, кто не перестаёт спрашивать."</p>
+            <p class="quote">"Великая цель науки — не ответы, а честные вопросы. Побеждает не тот, кто всё渴望 понял, а тот, кто не перестаёт спрашивать."</p>
             <p>Этот сайт — приглашение к интеллектуальному усилию. Не ради медалей, а ради понимания. Не ради оценки, а ради роста.</p>
             <p>Начните сегодня. Думайте самостоятельно. Ошибайтесь. Преодолевайте. И пусть физика станет не просто предметом, а опорой, с которой можно идти к любым вершинам.</p>
         </div>
     </div>
-       <footer>
+    <footer>
         © 2025 Олимпиадная Платформа. Все права защищены.
     </footer>
-<script>
-    // Highlight active navigation link
-    const navLinks = document.querySelectorAll('.header nav a');
-    const currentPath = window.location.pathname.split('/').pop() || 'index.html';
-    navLinks.forEach(link => {
-        const href = link.getAttribute('href').split('#')[0];
-        link.classList.remove('active');
-        if (href === currentPath) {
-            link.classList.add('active');
-        }
-    });
-</script>
+    <script>
+        // Highlight active navigation link based on page and section
+        const navLinks = document.querySelectorAll('.nav-link');
+        const currentPath = window.location.pathname.split('/').pop() || 'index.html';
+        const currentHash = window.location.hash || '#home';
+
+        navLinks.forEach(link => {
+            const href = link.getAttribute('href');
+            const path = href.split('#')[0];
+            const hash = href.includes('#') ? `#${href.split('#')[1]}` : '';
+
+            link.classList.remove('active');
+            if (path === currentPath) {
+                if (currentPath === 'index.html' || currentPath === '') {
+                    if (hash === currentHash || (hash === '' && currentHash === '#home')) {
+                        link.classList.add('active');
+                    }
+                } else {
+                    link.classList.add('active');
+                }
+            }
+        });
+
+        // Set active class for dropdown item
+        const dropdownLinks = document.querySelectorAll('.dropdown-content a');
+        dropdownLinks.forEach(link => {
+            if (link.getAttribute('href') === currentPath) {
+                link.classList.add('active');
+                document.querySelector('.dropdown-toggle').classList.add('active');
+            }
+        });
+
+        // Toggle dropdown on click
+        const dropdownToggle = document.querySelector('.dropdown-toggle');
+        const dropdown = document.querySelector('.dropdown');
+        dropdownToggle.addEventListener('click', (e) => {
+            e.preventDefault();
+            dropdown.classList.toggle('active');
+        });
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!dropdown.contains(e.target)) {
+                dropdown.classList.remove('active');
+            }
+        });
+    </script>
 </body>
 </html>
