--- a/task-details2.html
+++ b/task-details2.html
@@ -20,6 +20,73 @@
             min-height: 100vh;
             background: none;
         }
+        .header {
+    background: #ffffff;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+.header .logo {
+    font-size: 1.8em;
+    font-weight: 700;
+    color: #1a73e8;
+}
+.header nav a {
+    margin-left: 30px;
+    text-decoration: none;
+    color: #202124;
+    font-weight: 600;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+}
+.header nav a:hover {
+    color: #1a73e8;
+    border-bottom: 2px solid #1a73e8;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background: #ffffff;
+    min-width: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1000;
+    margin-top: 5px;
+}
+.dropdown.active .dropdown-content {
+    display: block;
+}
+.dropdown-content a {
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+    color: #202124;
+    font-weight: 600;
+}
+.dropdown-content a:hover {
+    color: #1a73e8;
+    background: #e8f0fe;
+}
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        gap: 15px;
+    }
+    .header nav a {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
         .task-details-card {
             max-width: 800px;
             width: 90%;
@@ -107,7 +174,25 @@
 </head>
 <body>
     <div class="task-details-card" id="task-details">
-        <!-- Task details will be populated by JavaScript -->
+        <div class="header">
+    <div class="logo">Atomaroid</div>
+    <nav>
+        <a href="info.html" class="nav-link">О платформе</a>
+        <a href="index.html#home" class="nav-link">Главная</a>
+        <a href="tasks.html" class="nav-link">Задачи</a>
+        <div class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle">Материалы</a>
+            <div class="dropdown-content">
+                <a href="books.html">Книги и PDF</a>
+                <a href="external-links.html">Внешние ссылки на задачи</a>
+                <a href="handbook.html">Олимпиадный гайд</a>
+            </div>
+        </div>
+        <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
+        <a href="index.html#contact" class="nav-link">Контакты</a>
+    </nav>
+</div>
+
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
@@ -535,6 +620,7 @@
     </script>
 </body>
 </html>
+
 
 
 
