--- a/task-details2.html
+++ b/task-details2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -50,6 +49,37 @@
         .header nav a.active {
             color: #1a73e8;
             border-bottom: 2px solid #1a73e8;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background: #ffffff;
+            min-width: 200px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            z-index: 1000;
+            margin-top: 5px;
+        }
+        .dropdown.active .dropdown-content {
+            display: block;
+        }
+        .dropdown-content a {
+            display: block;
+            padding: 12px 16px;
+            text-decoration: none;
+            color: #202124;
+            font-weight: 600;
+            margin-left: 0;
+            transition: color 0.3s ease, background 0.3s ease;
+        }
+        .dropdown-content a:hover {
+            color: #1a73e8;
+            background: #e8f0fe;
+            border-bottom: none;
         }
         .tasks-section {
             max-width: 1200px;
@@ -150,6 +180,13 @@
             .header nav {
                 margin-top: 10px;
             }
+            .header nav a {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            .dropdown-content {
+                min-width: 150px;
+            }
             .filter-bar {
                 flex-direction: column;
                 align-items: center;
@@ -177,7 +214,15 @@
             <a href="info.html" class="nav-link">О платформе</a>
             <a href="index.html#home" class="nav-link">Главная</a>
             <a href="tasks.html" class="nav-link">Задачи</a>
-            <a href="articles.html" class="nav-link">Статьи</a>
+            <div class="dropdown">
+                <a href="#" class="nav-link dropdown-toggle">Материалы</a>
+                <div class="dropdown-content">
+                    <a href="books.html">Книги и PDF</a>
+                    <a href="external-links.html">Внешние ссылки на задачи</a>
+                    <a href="handbook.html">Олимпиадный гайд</a>
+                </div>
+            </div>
+            <a href="articles.html" class="nav-link" target="_blank">Статьи</a>
             <a href="index.html#contact" class="nav-link">Контакты</a>
         </nav>
     </div>
@@ -193,12 +238,12 @@
                 <option value="">Любой год</option>
                 <option value="2024/2025">2024/2025</option>
             </select>
-<select id="round-filter">
-    <option value="">Любой тур</option>
-    <option value="Районный (городской) этап">Районный (городской) этап</option>
-    <option value="Полуфинальный этап">Полуфинальный этап</option>
-</select>
-<select id="grade-filter">
+            <select id="round-filter">
+                <option value="">Любой тур</option>
+                <option value="Районный (городской) этап">Районный (городской) этап</option>
+                <option value="Полуфинальный этап">Полуфинальный этап</option>
+            </select>
+            <select id="grade-filter">
                 <option value="">Любой класс</option>
                 <option value="младшая возрастная группа">Младшая возрастная группа (8-9 классы)</option>
                 <option value="старшая возрастная группа">Старшая возрастная группа (10-11 классы)</option>
@@ -206,7 +251,7 @@
                 <option value="8-е классы">8-е классы</option>
                 <option value="9-е классы">9-е классы</option>
                 <option value="10-е классы">10-е классы</option>
-		<option value="11-е классы">11-е классы</option>
+                <option value="11-е классы">11-е классы</option>
             </select>
             <input type="text" id="task-filter" placeholder="Введите номер задачи" />
         </div>
@@ -472,6 +517,7 @@ function filterTasks() {
 
     renderTasks(filteredTasks);
 }
+
 // Initial render
 renderTasks(tasks);
 
@@ -482,20 +528,51 @@ document.getElementById('round-filter').addEventListener('change', filterTasks);
 document.getElementById('grade-filter').addEventListener('change', filterTasks);
 document.getElementById('task-filter').addEventListener('input', filterTasks);
 
-// Highlight active navigation link
+// Highlight active navigation link based on page and section
 const navLinks = document.querySelectorAll('.nav-link');
 const currentPath = window.location.pathname.split('/').pop() || 'index.html';
+const currentHash = window.location.hash || '#home';
+
 navLinks.forEach(link => {
-    const href = link.getAttribute('href').split('#')[0];
+    const href = link.getAttribute('href');
+    const path = href.split('#')[0];
+    const hash = href.includes('#') ? `#${href.split('#')[1]}` : '';
+
     link.classList.remove('active');
-    if (href === currentPath) {
+    if (path === currentPath) {
+        if (currentPath === 'index.html' || currentPath === '') {
+            if (hash === currentHash || (hash === '' && currentHash === '#home')) {
+                link.classList.add('active');
+            }
+        } else {
+            link.classList.add('active');
+        }
+    }
+});
+
+// Set active class for dropdown item
+const dropdownLinks = document.querySelectorAll('.dropdown-content a');
+dropdownLinks.forEach(link => {
+    if (link.getAttribute('href') === currentPath) {
         link.classList.add('active');
+        document.querySelector('.dropdown-toggle').classList.add('active');
+    }
+});
+
+// Toggle dropdown on click
+const dropdownToggle = document.querySelector('.dropdown-toggle');
+const dropdown = document.querySelector('.dropdown');
+dropdownToggle.addEventListener('click', (e) => {
+    e.preventDefault();
+    dropdown.classList.toggle('active');
+});
+
+// Close dropdown when clicking outside
+document.addEventListener('click', (e) => {
+    if (!dropdown.contains(e.target)) {
+        dropdown.classList.remove('active');
     }
 });
 </script>
-   
-
-
-
-
-
+</body>
+</html>
