--- a/index.html
+++ b/index.html
@@ -299,21 +299,64 @@
             50% { transform: scale(1.02); }
             100% { transform: scale(1); }
         }
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                gap: 15px;
-            }
-            .header nav {
-                margin-top: 10px;
-            }
-            .header nav a {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
-            .dropdown-content {
-                min-width: 150px;
-            }
+       /* Tablet and small screens */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .header nav {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .header nav a {
+        margin: 10px 0;
+    }
+
+    .dropdown-content {
+        position: static; /* dropdown opens below without overflowing */
+        min-width: 150px;
+        box-shadow: none;
+    }
+
+    .popular-tasks {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .task-card, .articles-card, .contact-card {
+        width: 90%;
+        margin: 10px 0;
+    }
+}
+
+/* Small phones */
+@media (max-width: 480px) {
+    .main-banner h1 {
+        font-size: 1.8em;
+    }
+
+    .main-banner p {
+        font-size: 1em;
+    }
+
+    .main-banner button, .contact-button {
+        padding: 12px 25px;
+        font-size: 1em;
+    }
+}
+
+/* Prevent images/tables from overflowing */
+img, table {
+    max-width: 100%;
+    height: auto;
+}
+
         }
     </style>
 </head>
@@ -424,3 +467,4 @@
     </script>
 </body>
 </html>
+
